feat: Introduce Skeleton component, enhance typography, and update caching strategies

--- a/src/server/posts/building-scalable-web-applications-with-nextjs.mdx
+++ b/src/server/posts/building-scalable-web-applications-with-nextjs.mdx
@@ -15,107 +15,205 @@ tags:
 
 # Building Scalable Web Applications with Next.js
 
-Next.js has revolutionized the way we build web applications, offering a powerful framework that combines the best of React with server-side rendering capabilities. In this post, we'll explore how to build scalable web applications using Next.js and best practices for performance optimization.
+Next.js has revolutionized the way we build web applications, offering a powerful framework that combines the best of React with server-side rendering capabilities, data fetching, and routing. In this post, we'll explore how you can leverage Next.js to build scalable web applications that perform well, rank high in search engines, and provide a great user experience.
 
 ## Why Next.js?
 
 Next.js provides several features that make it an excellent choice for building scalable web applications:
 
-- Server-side rendering (SSR) for improved SEO and performance
-- Static site generation (SSG) for blazing-fast page loads
-- Incremental Static Regeneration (ISR) for dynamic content with static benefits
-- API routes for building backend functionality
-- File-based routing for simplified navigation
+  - Server-side rendering (SSR) for improved SEO and performance
+  - Static site generation (SSG) for blazing-fast page loads
+  - Incremental Static Regeneration (ISR) for dynamic content with static benefits
+  - API routes for building backend functionality
+  - File-based routing for simplified navigation
+  - Cache control and performance optimization features
+  - Built-in TypeScript support for type safety
+  - React server components for faster rendering
 
-## Performance Optimization Techniques
+# Building Scalable Web Applications with Next.js: React Cache, React Compiler, Server Actions, and Design Patterns  
 
-When building scalable applications, performance is a critical factor. Here are some techniques to optimize your Next.js application:
+Scalability is a critical concern for modern web applications. As your user base grows, your app must efficiently handle increased traffic, dynamic data, and complex interactions. Next.js, paired with React’s latest features and proven design patterns, provides a robust foundation for building scalable solutions. In this post, we’ll explore how to leverage **React Cache**, **React Compiler**, **Server Actions**, and key design patterns to build performant, maintainable applications.
 
-### 1. Code Splitting
+---
 
-Next.js automatically splits your code into smaller chunks, loading only what's necessary for each page. This reduces the initial load time and improves the user experience.
+## 1. Optimizing Data Fetching with React Cache  
+React Cache (experimental) allows you to memoize asynchronous data requests, reducing redundant API calls and improving performance. This is especially useful for data reused across components.
 
+### Example: Caching a Fetch Request  
+```tsx filename=src/utils/fetch-data.ts
+import { cache } from 'react';
 
-```tsx filename=src/test.tsx
-// Example of dynamic import for code splitting
-import dynamic from 'next/dynamic';
-
-// Instead of importing directly
-// import HeavyComponent from '../components/HeavyComponent'
-
-// Use dynamic import
-const HeavyComponent = dynamic(() => import('../components/HeavyComponent'), {
-  loading: () => <p>Loading...</p>,
-  ssr: false, // Only load component on client-side
+export const fetchPosts = cache(async () => {
+  const res = await fetch('https://api.example.com/posts');
+  return res.json();
 });
+```  
+```tsx filename=src/app/blog/page.tsx
+import { fetchPosts } from '@utils/fetch-data';
 
-export default function MyPage() {
+export default async function BlogPage() {
+  const posts = await fetchPosts();
+  
   return (
     <div>
-      <h1>My Page</h1>
-      <HeavyComponent />
+      {posts.map((post) => (
+        <article key={post.id}>{post.title}</article>
+      ))}
     </div>
   );
 }
+```  
+**Explanation:**  
+- `cache` memoizes the `fetchPosts` function, ensuring it’s called once per request cycle, even if used in multiple components.  
+- Ideal for static or revalidated data (combine with Next.js `revalidate` option for incremental updates).
+
+---
+
+## 2. Automating Performance with React Compiler  
+The React Compiler (experimental) intelligently auto-memoizes values and components, reducing unnecessary re-renders without manual `useMemo` or `useCallback`.
+
+### Example: Simplified Component Rendering  
+```tsx filename=src/utils/calculate-profile.ts
+function UserProfile({ user }) {
+  const profileData = calculateProfile(user); // Auto-memoized by React Compiler
+  
+  return (
+    <div>
+      <h1>{profileData.name}</h1>
+      <p>{profileData.bio}</p>
+    </div>
+  );
+}
+```  
+**Explanation:**  
+- The compiler detects `calculateProfile` as a static dependency of `user` and memoizes it.  
+- Enable the compiler in `next.config.js`:  
+```ts filename=next.config.js
+import type { NextConfig } from 'next';
+
+
+const config: NextConfig = {
+  reactExperimental: {
+    reactCompiler: true,
+  },
+};
+
+export default config;
+
 ```
 
-### 2. Image Optimization
+---
 
-Use the Next.js Image component to automatically optimize images, serving them in the right size and format based on the user's device.
+## 3. Streamlining Mutations with Server Actions  
+Next.js **Server Actions** enable server-side logic execution from client components, simplifying form handling and data mutations.
+
+### Example: Form Submission with Server Actions  
+```tsx filename=src/app/actions.ts
+'use server';
+
+export async function createPost(formData: FormData) {
+  const post = {
+    title: formData.get('title'),
+    content: formData.get('content'),
+  };
+  await db.post.create({ data: post });
+  revalidatePath('/blog'); // Refresh the blog page
+}
+```  
+```tsx filename=src/app/components/create-post.tsx
+import { createPost } from '@server/actions';
+
+export function CreatePost() {
+  return (
+    <form action={createPost}>
+      <input name="title" placeholder="Title" />
+      <textarea name="content" placeholder="Content" />
+      <button type="submit">Publish</button>
+    </form>
+  );
+}
+```  
+**Explanation:**  
+- `createPost` runs on the server, enhancing security and reducing client-side JS.  
+- No need for API routes—call server functions directly from forms.  
+
+---
+
+## 4. Design Patterns for Scalability  
+
+### a. Provider Pattern (State Management)  
+Use React Context to share state across components without prop drilling.  
+
+```tsx filename=src/app/providers/theme-provider.tsx
+'use client';
+
+import { createContext, useContext, useState } from 'react';
+
+const ThemeContext = createContext();
+
+export function ThemeProvider({ children }) {
+  const [theme, setTheme] = useState('light');
+  return (
+    <ThemeContext.Provider value={{ theme, setTheme }}>
+      {children}
+    </ThemeContext.Provider>
+  );
+}
+
+// Usage in components
+const { theme, setTheme } = useContext(ThemeContext);
+```
+
+### b. Repository Pattern (Data Abstraction)  
+Abstract data access logic into a repository class for cleaner code and easier testing.  
+
+```tsx filename=src/lib/repositories/post-repository.ts
+import { db } from '@server/db';
+
+export class PostRepository {
+  async getAll() {
+    return db.post.findMany();
+  }
+  async create(postData) {
+    return db.post.create({ data: postData });
+  }
+}
+
+// app/blog/page.tsx
+const repo = new PostRepository();
+const posts = await repo.getAll();
+```
+
+### c. Strategy Pattern (Interchangeable Algorithms)  
+Define interchangeable strategies for flexible behavior.  
 
 ```tsx
-import Image from 'next/image';
-
-export default function OptimizedImage() {
-  return (
-    <div>
-      <Image
-        src='/images/profile.jpg'
-        alt='Profile Picture'
-        width={500}
-        height={300}
-        priority
-        placeholder='blur'
-        blurDataURL='data:image/jpeg;base64,/9j...'
-      />
-    </div>
-  );
+// lib/strategies/sorting.ts
+export interface SortingStrategy {
+  sort(data: any[]): any[];
 }
+
+export class DateSortStrategy implements SortingStrategy {
+  sort(data) { return data.sort((a, b) => a.date - b.date); }
+}
+
+// Usage
+const sorter = new DateSortStrategy();
+const sortedPosts = sorter.sort(posts);
 ```
 
-### 3. Lazy Loading
+---
 
-Implement lazy loading for components that are not immediately visible on the screen. This can significantly improve the initial load time of your application.
+## Conclusion  
+By combining Next.js with React’s cutting-edge tools like **React Cache**, **React Compiler**, and **Server Actions**, you can build applications that scale gracefully with your user base. Pair these with proven design patterns (Provider, Repository, Strategy) to ensure maintainability and flexibility.  
 
-### 4. Caching Strategies
+Start experimenting with these tools today to future-proof your Next.js apps!  
 
-Utilize caching strategies to reduce server load and improve response times. Next.js provides built-in caching mechanisms that you can leverage.
+---
 
-```tsx 
-// Example of using SWR for data fetching with caching
-import useSWR from 'swr';
+## Resources
 
-const fetcher = (url: string) => fetch(url).then((res) => res.json());
-
-export default function Profile() {
-  const { data, error, isLoading } = useSWR('/api/user', fetcher, {
-    revalidateOnFocus: false,
-    revalidateOnReconnect: false,
-    dedupingInterval: 60000, // dedupe requests with the same key in this time span
-  });
-
-  if (error) return <div>Failed to load</div>;
-  if (isLoading) return <div>Loading...</div>;
-
-  return (
-    <div>
-      <h1>{data.name}</h1>
-      <p>{data.bio}</p>
-    </div>
-  );
-}
-```
-
-## Conclusion
-
-Building scalable web applications with Next.js requires careful planning and implementation of best practices. By leveraging Next.js's built-in features and following the optimization techniques discussed in this post, you can create high-performance applications that can scale to meet your users' needs.
+- [Next.js Documentation](https://nextjs.org/docs)
+- [React Cache Documentation](https://react.dev/reference/react/cache)
+- [React Compiler Documentation](hhttps://react.dev/learn/react-compiler)
+- [Next.js Server Actions Documentation](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)
